5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1593_2043.log
== TEST (2019-03-30 00:33:11) 
-- CODE:
a = 1
b = 2
c = 3
d = 4
print(round((a + b + c + d) / 4), 2)
-- OUTPUT:
2 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:59:52) 
-- CODE:
a = 1
b = 2
c = 3
d = 4
print(round((a + c + b + d) / 4, 2))
-- OUTPUT:
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 15:00:22) 
-- CODE:
a = 1.0
b = 2.0
c = 3.0
d = 4.0
print(round((a + c + b + d) / 4, 2))
-- OUTPUT:
2.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:00:28) 
-- CODE:
a = 1.0
b = 2.0
c = 3.0
d = 4.0
print(round((a + c + b + d) / 4, 2))
-- EXECUTION TIME:
0.144544
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
2.5
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
2.5
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
2.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:10:13) 
-- CODE:
a = float(input("digite a primeira variavel: "))
b = float(input("digite a segunda variavel: "))
c = float(input("digite a terceira variavel: "))
d = float(input("digite a quarta variavel: "))
print(round((1*a + 2*b + 3*c + 4*d) / (1 + 2 + 3 + 4))
-- ERROR:
File "XXXX", line 6
    
                                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:10:54) 
-- CODE:
a = float(input("digite a primeira variavel: "))
b = float(input("digite a segunda variavel: "))
c = float(input("digite a terceira variavel: "))
d = float(input("digite a quarta variavel: "))
print(round((1*a + 2*b + 3*c + 4*d) / (1 + 2 + 3 + 4), 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 18:11:25) 
-- CODE:
a = float(input("digite a primeira variavel: "))
b = float(input("digite a segunda variavel: "))
c = float(input("digite a terceira variavel: "))
d = float(input("digite a quarta variavel: "))
print(round((1*a + 2*b + 3*c + 4*d) / (1 + 2 + 3 + 4), 2))
-- EXECUTION TIME:
0.170127
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
